# crypto-auditing

./: .gitignore  Cargo.toml  GNUmakefile  README.md  crau.c  crau.h  deny.toml  macros.h  tox.ini
.github/: dependabot.yml
.github/workflows/: python.yml  rust.yml
agent/: Cargo.toml  LICENSE.GPL-2.0  README.md  agent.conf  build.rs
agent/fixtures/: agent.conf
agent/src/: agent.rs  config.rs  log_writer.rs  main.rs  permissions.rs  ringbuf.rs
agent/src/bpf/: audit.bpf.c  audit.h
agent/tests/: coalesce.rs  composite.rs  no_coalesce.rs
agent/tests/agenttest/: Cargo.toml  build.rs
agent/tests/agenttest/src/: lib.rs
agent/tests/agenttest/src/bpf/: agent.bpf.c  vmlinux.h
client/: Cargo.toml  README.md
client/src/: client.rs  config.rs  main.rs
crypto-auditing/: Cargo.toml  README.md  build.rs
crypto-auditing/examples/: client.rs
crypto-auditing/src/: event_broker.rs  lib.rs  types.rs
crypto-auditing/src/bpf/: audit.h
crypto-auditing/src/event_broker/: client.rs  error.rs  service.rs
docs/: architecture.md  architecture.odg  logging-format.md  objectives.md  performance.md  probe-points.md  query.schema.json  registry.md
event-broker/: Cargo.toml  README.md
event-broker/examples/: client.rs
event-broker/src/: client.rs  config.rs  lib.rs  main.rs  server.rs  service.rs
event-broker/tests/: test.rs
fixtures/conf/: agent.conf  query.conf
fixtures/logs/since-until/: audit.cborseq  none.json  since-until.json  since.json  until.json
fixtures/normal/: input.cborseq  output.cborseq
log-parser/: Cargo.toml  README.md
log-parser/src/: config.rs  log_parser.rs  main.rs  query.rs
log-parser/tests/: test.rs
monitor/: Cargo.toml  README.md
monitor/src/: config.rs  monitor.rs
rpm/: crypto-auditing.spec  generate_source_tarballs.sh
scripts/: GNUmakefile  README.md  flamegraph.py  gen-tables.py  gen_tables.py  tables.py
types/: Cargo.toml  build.rs
types/src/: lib.rs
