[package]
name = "crypto-auditing-agent"
description = "Event collector agent for crypto-auditing project"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["The crypto-auditing developers"]

[features]
default = ["tokio-uring"]

[dependencies]
anyhow = "1.0"
bytes = "1.2"
clap = { version = "4", features=["cargo", "derive"] }
crypto-auditing = { path = "../crypto-auditing" }
futures = "0.3"
libbpf-rs = { version = "0.20", features=["novendor"] }
libc = "0.2"
nix = "0.26"
openssl = "0.10"
page_size = "0.5"
serde = "1.0"
serde_cbor = "0.10"
time = { version = "0.3", features=["formatting", "local-offset", "macros"] }
tokio = { version = "1.23", features=["full"] }
tokio-uring = { version = "0.4", optional = true }
toml = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter"] }

[build-dependencies]
libbpf-cargo = { version = "0.20", features=["novendor"] }
