[package]
name = "crypto-auditing-agent"
description = "Event collector agent for crypto-auditing project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["tokio-uring"]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
caps.workspace = true
clap = { workspace = true, features = ["cargo", "derive"] }
crypto-auditing.workspace = true
futures.workspace = true
libbpf-rs.workspace = true
libc.workspace = true
nix.workspace = true
openssl.workspace = true
page_size.workspace = true
serde.workspace = true
serde_cbor.workspace = true
time = { workspace = true, features = ["formatting", "local-offset", "macros"] }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "signal"] }
tokio-uring = { version = "0.4", optional = true }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
probe.workspace = true

[build-dependencies]
libbpf-cargo.workspace = true

[dev-dependencies]
tempfile.workspace = true
plain.workspace = true
agenttest = { path = "tests/agenttest" }

[[bin]]
name = "crau-agent"
path = "src/agent.rs"
