[package]
name = "crypto-auditing-client"
description = "Event broker client for crypto-auditing project"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["The crypto-auditing developers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4", features=["derive"] }
crypto-auditing = { path = "../crypto-auditing" }
futures = "0.3"
serde_cbor = "0.10"
serde_json = "1.0"
tokio = "1.23"
toml = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter"] }
