[package]
name = "crypto-auditing-client"
description = "Event broker client for crypto-auditing project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["cargo", "derive"] }
crypto-auditing = { version = "0.1", path = "../crypto-auditing" }
futures = "0.3"
serde_cbor = "0.11"
serde_json = "1.0"
tokio = { version = "1.23", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
