[package]
name = "crypto-auditing-client"
description = "Event broker client for crypto-auditing project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["cargo", "derive"] }
crypto-auditing.workspace = true
futures.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bin]]
name = "crau-client"
path = "src/client.rs"
