[package]
name = "crypto-auditing"
description = "Client library for crypto-auditing project"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["The crypto-auditing developers"]

[dependencies]
futures = "0.3"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_with = "2.2"
tarpc = { version = "0.33", features = ["serde-transport", "unix"] }
thiserror = "1.0"
tokio = "1.23"
tokio-serde = { version = "0.8", features=["cbor"] }
tokio-stream = "0.1"
tracing = "0.1"

[build-dependencies]
bindgen = "0.63"

[dev-dependencies]
anyhow = "1.0"
clap = { version = "4", features=["derive"] }

[[example]]
name = "client"
