[package]
name = "crypto-auditing"
description = "Client library for crypto-auditing project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
futures = "0.3"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_with = "2.2"
thiserror = "1.0"
tokio = { version = "1.23", features = ["net", "rt"] }
tokio-serde = { version = "0.8", features = ["cbor"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"

[build-dependencies]
bindgen = "0.63"

[dev-dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }

[[example]]
name = "client"
