[package]
name = "crypto-auditing"
description = "Client library for crypto-auditing project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
futures.workspace = true
libc.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "rt"] }
tokio-serde.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[build-dependencies]
bindgen.workspace = true

[dev-dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }

[[example]]
name = "client"
