[package]
name = "crypto-auditing-event-broker"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["The crypto-auditing developers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
crypto-auditing = { path = "../crypto-auditing" }
futures = "0.3"
inotify = "0.10"
serde_cbor = "0.10"
tarpc = { version = "0.33", features = ["serde-transport", "unix"] }
tokio = "1.23"
tokio-serde = { version = "0.8", features=["cbor"] }
tokio-stream = "0.1"
toml = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter"] }
