[package]
name = "crypto-auditing-event-broker"
description = "Event broker for crypto-auditing project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[badges]
maintenance = { status = "deprecated" }

[features]
default = ["libsystemd"]

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["cargo", "derive"] }
crypto-auditing.workspace = true
futures.workspace = true
inotify.workspace = true
libsystemd = { version = "0.7.2", optional = true }
serde_cbor.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-serde.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "crau-event-broker"
path = "src/event_broker.rs"
