[package]
name = "crypto-auditing-log-parser"
description = "Event log parser for crypto-auditing project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features=["derive"] }
crypto-auditing.workspace = true
hex.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
serde_with = { workspace = true, features = ["hex"] }

[[bin]]
name = "crau-log-parser"
path = "src/log_parser.rs"
