[package]
name = "crypto-auditing-log-parser"
description = "Event log parser for crypto-auditing project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features=["derive", "cargo"] }
crypto-auditing.workspace = true
hex.workspace = true
jiff.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
serde_with = { workspace = true, features = ["hex"] }
toml.workspace = true
pager.workspace = true
parse_datetime.workspace = true

[[bin]]
name = "crau-query"
path = "src/query.rs"
