[package]
name = "crypto-auditing-event-monitor"
description = "Event monitor for crypto-auditing project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["cargo", "derive"] }
crypto-auditing.workspace = true
futures.workspace = true
hex.workspace = true
inotify.workspace = true
serde = { workspace = true, features = ["rc"] }
serde_cbor.workspace = true
serde_json.workspace = true
serde_with = { workspace = true, features = ["hex"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-serde.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "crau-monitor"
path = "src/monitor.rs"
