[package]
name = "crypto-auditing-types"
description = "Event type definitions for crypto-auditing project"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["The crypto-auditing developers"]

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.2"

[build-dependencies]
bindgen = "0.63"
