[package]
name = "agenttest"
description = "Helper crate for agent integration tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
libbpf-rs.workspace = true
libc.workspace = true
nix.workspace = true
tempfile.workspace = true
plain.workspace = true

[build-dependencies]
libbpf-cargo.workspace = true
